Remove several redundant abstractions.
Remove several redundant abstractions for thresholds to aid
in the migration to the new declaration language.

Refs #113677